[package]
name = "librtbit-dht"
version = "0.1.0"
edition = "2024"
description = "Kademlia DHT implementation for the rtbit BitTorrent client"
license = "MIT"
repository = "http://100.92.54.45:3002/indexarr/librtbit-dht"

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["sha1w/sha1-crypto-hash", "librtbit-core/sha1-crypto-hash"]
sha1-ring = ["sha1w/sha1-ring", "librtbit-core/sha1-ring"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = "1"
serde_derive = "1"
leaky-bucket = "1.1"
serde_json = "1"
buffers = { git = "http://100.92.54.45:3002/indexarr/librtbit-buffers.git", tag = "v0.1.0", package = "librtbit-buffers" }
bencode = { git = "http://100.92.54.45:3002/indexarr/librtbit-bencode.git", tag = "v0.1.0", package = "librtbit-bencode" }
clone_to_owned = { git = "http://100.92.54.45:3002/indexarr/librtbit-clone-to-owned.git", tag = "v0.1.0", package = "librtbit-clone-to-owned" }
librtbit-core = { git = "http://100.92.54.45:3002/indexarr/librtbit-core.git", tag = "v0.1.0", default-features = false }
sha1w = { git = "http://100.92.54.45:3002/indexarr/librtbit-sha1-wrapper.git", tag = "v0.1.0", package = "librtbit-sha1-wrapper", default-features = false }
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
backon = { version = "1.5", features = ["tokio-sleep"] }
futures = "0.3"
rand = "0.9"
indexmap = "2"
dashmap = { version = "6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
bytes = "1"
librqbit-dualstack-sockets = "0.7"
thiserror = "2"
aws-lc-rs = "1.12"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
