[package]
name = "librtbit-dht"
version = "0.1.4"
edition = "2024"
description = "Kademlia DHT implementation for the rtbit BitTorrent client"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/librtbit-dht"

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["sha1w/sha1-crypto-hash", "librtbit-core/sha1-crypto-hash"]
sha1-ring = ["sha1w/sha1-ring", "librtbit-core/sha1-ring"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = "1"
serde_derive = "1"
leaky-bucket = "1.1"
serde_json = "1"
buffers = { git = "https://github.com/TheDancingDeveloper-org/librtbit-buffers.git", package = "librtbit-buffers" }
bencode = { git = "https://github.com/TheDancingDeveloper-org/librtbit-bencode.git", package = "librtbit-bencode" }
clone_to_owned = { git = "https://github.com/TheDancingDeveloper-org/librtbit-clone-to-owned.git", package = "librtbit-clone-to-owned" }
librtbit-core = { git = "https://github.com/TheDancingDeveloper-org/librtbit-core.git", default-features = false }
sha1w = { git = "https://github.com/TheDancingDeveloper-org/librtbit-sha1-wrapper.git", package = "librtbit-sha1-wrapper", default-features = false }
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
backon = { version = "1.6", features = ["tokio-sleep"] }
futures = "0.3"
rand = "0.10"
indexmap = "2"
dashmap = { version = "6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
bytes = "1"
librqbit-dualstack-sockets = "0.7"
thiserror = "2"
aws-lc-rs = "1.17"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
